# network-wiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  etl_jinja_wiki.html  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs-site/: zensical.toml
docs-site/docs/: index.md
docs-site/docs/developer/: architecture.md  contributing.md  index.md  package-layout.md  rendering-pipeline.md
docs-site/docs/tutorial/: first-graph.md  flask.md  index.md  installation.md  templates.md
docs-site/docs/user-guide/: configuration.md  exporter.md  faq.md  index.md  styling.md  templates.md  themes.md
examples/: ecommerce_architecture.py  etl.py  example_etl.py  flask_app.py  music_album_production_wiki.html  wiki_content_music.py  wiki_music_album_production.py  wiki_org_chart.py
examples/templates/etl/: full_pipeline.html.j2
examples/templates/music/: full_mixer.html.j2  full_producer.html.j2  mini_producer.html.j2
examples/templates/org/: full_executive.html.j2  full_manager.html.j2  mini_executive.html.j2
src/: example_jinja.py  full_default.html.j2  full_pipeline.html.j2  full_source.html.j2  igraph_wiki_exporter.py  mini_default.html.j2
src/network_wiki/: __init__.py  edge_style.py  exporter.py  flask_view.py  json_safe.py  layout.py  node_style.py  wiki.py
src/network_wiki/templates/: base_network.html.j2  full_default.html.j2  full_source.html.j2  mini_default.html.j2  page.html.j2  page_flask.html.j2
tests/: test_edge_style.py  test_exporter.py  test_flask_view.py  test_json_safe.py  test_layout.py  test_node_style.py
