[build-system]
requires=["setuptools>=69"]
build-backend="setuptools.build_meta"

[project]
name="network-wiki"
version="0.1.0"
description="Generate interactive HTML wiki pages from igraph networks"
readme="README.md"
requires-python=">=3.11"
dependencies=["jinja2","igraph"]

[tool.setuptools]
package-dir={""="src"}

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.package-data]
network_wiki=["templates/*.j2"]
