[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-wiki"
version = "0.4.0"
description = "Generate interactive HTML graph visualisations with expandable node wikis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["igraph", "graph", "visualisation", "vis.js", "wiki", "html"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "igraph>=0.11",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/mark-me/network-wiki"
Repository = "https://github.com/mark-me/network-wiki"
Issues = "https://github.com/mark-me/network-wiki/issues"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

# Sluit de templates mee in de gebouwde wheel
[tool.setuptools.package-data]
network_wiki = ["templates/*.j2"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
